--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -39,7 +39,7 @@
         <div class="row mb-3">
             @Html.LabelFor(m => m.UserRole, new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
-                @Html.DropDownListFor(m => m.UserRole, Model.RolesList, "Seleccione un rol", new { @class = "form-select" })
+                @Html.DropDownListFor(m => m.UserRole, Model.RolesList, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.UserRole, "", new { @class = "text-danger" })
             </div>
         </div>
